v3.8.3 (XXXX-XX-XX)
-------------------

* Fixed potential undefined behavior in edge cache during cache migration tasks.
  There was a short window of time in which an already freed Table could be used
  by concurrently running edge lookups.

* Improve performance of getting-in-sync protocol when using revision trees (for
  collections created with 3.8). The protocol optimization allows skipping the
  unused parts of the revision trees in the data transfer, which can
  substantially reduce the amount of data to be transfered for small and medium
  collections when trying to get back into sync.

* Change error message for queries that use too much memory from "resource limit
  exceeded" to "query would use more memory than allowed".

* arangorestore: Fix the order (regarding distributeShardsLike) in which
  collections are being created during restore, which could result in an error
  and make manual intervention necessary.


v3.8.2 (2021-10-26)
-------------------

* Updated ArangoDB Starter to 0.15.3.

* Fix a potential overwhelm situation on DB servers that can lead to no further
  tasks being pulled from a DB servers queue even though there would still be
  processing capacity and idle threads available.

* Fixed compilation and linking when using glibc 2.34.

* Fuerte: don't fall back to identity encoding in case of unknown encoding.

* Fix caching of collection counts and index selectivity estimates in cluster.
  The cache values expired too early in previous versions, making the cache
  ineffective.

* Add better error message for replication request failures in case requests are
  retried.

* Make background statistics gathering more efficient by avoiding one AQL query
  every 10 seconds that fetched the most recent stats entry. Instead, buffer the
  entry in value after we have written it. Also spread out the statistics calls
  by different servers more randomly, so that request spikes are avoided for