@@ -1,6 +1,11 @@
 v3.8.3 (XXXX-XX-XX)
 -------------------
 
+* When enabling the cluster supervision maintenance mode via the web UI, there
+  is now the possibility to select a duration for the maintenance mode.
+  Previous versions of ArangoDB always enabled the maintenance mode for one
+  hour, without allowing any choice here.
+
 * Fixed potential undefined behavior in edge cache during cache migration tasks.
   There was a short window of time in which an already freed Table could be used
   by concurrently running edge lookups.
